--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ a {
 
 /* --- Зображення --- */
 .hero-image {
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
     margin-top: 20px;
     border-radius: 15px;
@@ -172,6 +172,7 @@ a {
     object-fit: cover;
     /* Центрує зображення, щоб обрізалися краї рівномірно */
     object-position: center;
+    display: block;
 }
 
 /* ======================================= */
@@ -510,3 +511,4 @@ footer .hero-image.footer-img {
     .adventure-image, .story-image { height: 180px; }
 
 }
+
